# ChroniclesOfADrifter

./: .gitignore  CMakeLists.txt  CODE_REVIEW_COMPLETE.md  CODE_REVIEW_IMPROVEMENTS.md  CROSS_PLATFORM_SUPPORT.md  DEATH_RESPAWN_IMPLEMENTATION.md  DEATH_RESPAWN_QUICKREF.md  DEATH_RESPAWN_SYSTEM.md  EDITOR_INTEGRATION_SUMMARY.md  HOW_TO_PLAY.md  IMPLEMENTATION_SUMMARY.md  LOOT_DROP_QUICKREF.md  LOOT_DROP_SYSTEM.md  PHASE1_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SAVE_LOAD_SYSTEM.md  SECURITY_SUMMARY_CODE_REVIEW.md  SECURITY_SUMMARY_SAVELOAD.md  WHATS_NEW.md  build.bat  build.sh  settings.json  test_features.csx
docs/: BUILD_SETUP.md  EDITOR_INTEGRATION.md  PHASE4_VISUAL_POLISH.md  PHASE5_SYSTEMS.md  PROCEDURAL_GENERATION.md  PYTHON_SCRIPTING.md  REFLECTION_SYSTEM.md  TERRAIN_GENERATION.md  TEXTURE_CUSTOMIZATION.md
scripts/lua/enemies/: goblin_example.lua
scripts/python/: engine_bindings.py
scripts/python/enemies/: goblin_ai.py
scripts/python/tools/: asset_processor.py
src/Engine/: ChroniclesEngine.cpp  ChroniclesEngine.h  ChroniclesEngine.vcxproj  D3D11Renderer.cpp  D3D11Renderer.h  D3D12Renderer.cpp  IPC.cpp  IPC.h  IRenderer.h  LuaEnhancedAPI.cpp  LuaEnhancedAPI.h  PythonAPI.cpp  PythonAPI.h  Reflection.h  ReflectionAPI.cpp  ReflectionAPI.h  ReflectionExample.cpp  Serialization.h  SerializationAPI.cpp  SerializationAPI.h
src/Game/: ChroniclesOfADrifter.csproj  Program.cs
src/Game/ECS/: World.cs
src/Game/ECS/Components/: AbilityComponent.cs  AchievementComponent.cs  AttackAnimationComponent.cs  AudioComponent.cs  DayNightVisualComponent.cs  DialogueTreeComponent.cs  DroppedItemComponent.cs  EnvironmentalAnimationComponent.cs  ExperienceComponent.cs  FarmPlotComponent.cs  HazardComponent.cs  LightingComponent.cs  LootDropComponent.cs  MinimapComponent.cs  ParallaxLayerComponent.cs  ParticleEmitterComponent.cs  PlayerComponent.cs  PositionComponent.cs  ProjectileComponent.cs  RespawnComponent.cs  StatusEffectComponent.cs  StatusEffectVisualComponent.cs  TileComponent.cs  UIComponent.cs
src/Game/ECS/Systems/: AbilitySystem.cs  AchievementSystem.cs  AudioSystem.cs  BlockInteractionSystem.cs  BossSystem.cs  CameraSystem.cs  CombatSystem.cs  CreatureSpawnSystem.cs  DayNightVisualSystem.cs  DeathSystem.cs  DialogueSystem.cs  ExperienceSystem.cs  FarmingSystem.cs  HazardSystem.cs  LightingSystem.cs  LootDropSystem.cs  MinimapSystem.cs  MovementSystem.cs  NPCSystem.cs  ObjectPoolSystem.cs  ParallaxSystem.cs  ParticleSystem.cs  PathfindingSystem.cs  PlayerInputSystem.cs  ProjectileSystem.cs  QuestSystem.cs  QuestTrackerSystem.cs  RelationshipSystem.cs  RenderingSystem.cs  SaveSystem.cs  ScriptSystem.cs  StatusEffectSystem.cs  TerrainRenderingSystem.cs  TradingSystem.cs  UISystem.cs  VisualEffectsSystem.cs  VisualRenderingSystem.cs  WeatherEffectSystem.cs
src/Game/Editor/: EditorCommandStack.cs  EditorController.cs  EditorToolContext.cs  IEditorCommand.cs  SetTileCommand.cs  VoxelPaintTool.cs
src/Game/Engine/: EngineInterop.cs  SettingsManager.cs
src/Game/Engine/IPC/: IPCSystem.cs
src/Game/Engine/Reflection/: ReflectionSystem.cs
src/Game/Engine/Serialization/: SerializationSystem.cs
src/Game/Properties/: launchSettings.json
src/Game/Rendering/: ConsoleRenderer.cs  TerrainConsoleRenderer.cs  TileCustomizationManager.cs  TilesetVariant.cs
src/Game/Scenes/: CollisionDemoScene.cs  CompleteGameLoopScene.cs  CraftingDemoScene.cs  CustomizationDemoScene.cs  DevWorldScene.cs  HybridGameplayDemoScene.cs  IntegratedPlayableScene.cs  MiningDemoScene.cs  PlayableDemoScene.cs  Scene.cs  UIDemoScene.cs  VisualDemoScene.cs
src/Game/Scripting/: PythonScriptEngine.cs
src/Game/Serialization/: SaveData.cs
src/Game/Tests/: AbilitySystemTest.cs  AchievementSystemTest.cs  AnimationEnhancementTest.cs  BossEncounterTest.cs  CinematicCameraTest.cs  CollisionSystemTest.cs  CustomizationEnhancementTests.cs  DayNightVisualTest.cs  DialogueSystemTest.cs  EnhancedQuestTrackerTest.cs  ExperienceLevelingTest.cs  FarmingSystemTest.cs  HazardSystemTest.cs  HybridGameplayTest.cs  MinimapSystemTest.cs  ObjectPoolSystemTest.cs  ParticleEffectTest.cs  PathfindingSystemTest.cs  RangedCombatTest.cs  RelationshipSystemTest.cs  SaveLoadTest.cs  SettingsSystemTest.cs  SoundSystemTest.cs  StatusEffectTest.cs  StructureGenerationTest.cs  TradingSystemTest.cs  WeatherEffectSystemTest.cs
src/Game/UI/: DragDropManager.cs  UIText.cs  UITooltip.cs
src/Game/World/: Chunk.cs  ChunkManager.cs  DungeonGenerator.cs  GridCoordUtility.cs  StructureGenerator.cs  TerrainEnhancementSystem.cs  TerrainGenerator.cs  TimeSystem.cs  VegetationGenerator.cs  WeatherSystem.cs  WorldFileService.cs  WorldGenerationConfig.cs
